hard-gists/3113810/run.log
=== Docker Run Log for 3113810 ===
Started at: Mi 29. Okt 13:40:59 CET 2025

[2025-10-29 13:41:00] START: Running container for 3113810
[2025-10-29 13:41:00] SUCCESS: Container 1159ef9b6d54b210fdd3aa1c7e691c4b14662b5c1922ecb005cc9a20c28b586b started for 3113810
=== Container logs for 3113810 ===
  File "/snippet.py", line 14
    print "usage: ... | bberrors 'Window Title'"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 3113810 ===
[2025-10-29 13:41:02] INFO: Container 1159ef9b6d54b210fdd3aa1c7e691c4b14662b5c1922ecb005cc9a20c28b586b has stopped
